buildscript {
	repositories {
		mavenCentral()
		maven {
			name = "forge"
			url = "http://files.minecraftforge.net/maven"
		}
		maven {
			name = "sonatype"
			url = "https://oss.sonatype.org/content/repositories/snapshots/"
		}
	}
	dependencies {
		classpath 'net.minecraftforge.gradle:ForgeGradle:1.2-SNAPSHOT'
	}
}

apply plugin: 'forge'
apply plugin: 'maven'
apply plugin: 'maven-publish'

sourceCompatibility = 1.8
targetCompatibility = 1.8


repositories {
	maven {
		name = "ic2"
		url = "http://maven.ic2.player.to/"
	}
	maven {
		name "Mobius Repo"
		url "http://mobiusstrip.eu/maven"
	}
	maven {
		name 'CB Repo'
		url "http://chickenbones.net/maven/"
	}
	maven {
		name "CurseForge"
		url "https://minecraft.curseforge.com/api/maven/"
	}
	maven {
	   name "CurseMaven"
	   url "https://www.cursemaven.com"
	}
	ivy {
		name "BuildCraft"
		artifactPattern "http://www.mod-buildcraft.com/releases/BuildCraft/[revision]/[module]-[revision]-[classifier].[ext]"
	}
	maven {
		name "TiC"
		url "http://dvs1.progwml6.com/files/maven"
	}
	ivy {
		name = 'ThaumCraft 4 API'
		artifactPattern 'https://dl.dropboxusercontent.com/u/47135879/[module](-[classifier])-1.7.10-[revision](.[ext])'
	}
	ivy {
		name "MineTweaker3"
		artifactPattern "http://minetweaker3.powerofbytes.com/download/[module]-[classifier]-[revision].[ext]"
	}
	ivy {
		name "OpenComputers"
		artifactPattern "http://maven.cil.li/li/cil/oc/[module]/[revision]/[module]-[revision]-[classifier].[ext]"
	}
	maven {
		name = "gt"
		url = "https://gregtech.overminddl1.com/"
	}
}

configurations {
	shade
	compile.extendsFrom shade
}

version = "0.7.24-FPSP"

def ENV = System.getenv()
if (ENV.BUILD_NUMBER) {
	version = version + "." + "${System.getenv().BUILD_NUMBER}"
}

minecraft {
	version = "1.7.10-10.13.4.1614-1.7.10"
	replace "@MODVERSION@", project.version
}

group = 'TechReborn'

task deleteOldArtifacts(type: Delete) {
	delete 'build/libs'
}

classes.dependsOn deleteOldArtifacts

def grabDep(name, url) {
	ant.get(src: url, dest: 'dep')
	file("dep/" + url.substring(url.lastIndexOf("/"))).renameTo(file("dep/" + name + ".jar"))
}

dependencies {
	def f = new File('dep/')
	if (!f.exists()) {
		f.mkdirs()
	}
	if (!f.exists()) {
		f.mkdir()
	}
	compile 'net.industrial-craft:industrialcraft-2:2.2.827-experimental:dev'
	shade 'net.industrial-craft:industrialcraft-2:2.2.827-experimental:api'
	compile name: 'buildcraft', version: '7.1.19', classifier: "dev", ext: 'jar'
	compile "net.sengir.forestry:forestry_1.7.10:4.2.16.64:dev"
	shade "net.sengir.forestry:forestry_1.7.10:4.2.16.64:api"
	compile "com.github.glitchfiend.biomesoplenty:BiomesOPlenty:1.7.10-2.1.0.1465:deobf"
	compile "baubles:Baubles:1.7.10:1.0.1.10"
	compile "thaumcraft:Thaumcraft:1.7.10:4.2.3.5"
	compile "thaumcraft:Thaumcraft:1.7.10:4.2.3.5"
	compile name: "MineTweaker3", version: "1.7.10-3.0.9C", classifier: "Dev"
	compile "mods.railcraft:Railcraft_1.7.10:9.12.3.0:dev"
	compile "curse.maven:cofh-core-69162:2388751"
    compile "curse.maven:thermal-expansion-69163:2388759"
	compile "curse.maven:thermal-foundation-222880:2388752"
}


processResources
	{
		// replace stuff in mcmod.info, nothing else
		from(sourceSets.main.resources.srcDirs) {
			include 'mcmod.info'

			// replace version and mcversion
			// ${version}   and    ${mcversion}    are the exact strings being replaced
			expand 'version':project.version, 'mcversion':project.minecraft.version
		}

		// copy everything else, that's not the mcmod.info
		from(sourceSets.main.resources.srcDirs) {
			exclude 'mcmod.info'
		}
	}

task sourceJar(type: Jar) {
	from sourceSets.main.allSource
	classifier = 'src'
}

task deobfJar(type: Jar) {
	from sourceSets.main.output
	exclude "**/*.psd"
	classifier = 'dev'
}

jar {
	exclude "**/*.psd"
	classifier = 'universal'
	configurations.shade.each { dep ->
		from(project.zipTree(dep)){
			include 'ic2/api/'
			include 'forestry/api/fuels/'
			exclude 'META-INF', 'META-INF/**', '**/*.java'
		}
	}
}

task apiJar(type: Jar) {
	from sourceSets.main.allSource
	from sourceSets.main.output
	include 'techreborn/api/**/*'

	classifier = "api"
}

javadoc {
	source += sourceSets.api.allSource
	include 'techreborn/api/**/*'
}


apiJar.mustRunAfter deobfJar

artifacts {
	archives sourceJar
	archives deobfJar
	archives apiJar
}

build.dependsOn sourceJar, deobfJar, apiJar

uploadArchives {
	repositories {
		mavenDeployer {
			repository(url: "file:///var/www/maven/")
			pom {
				groupId = "TechReborn"
				version = project.version
				artifactId = project.archivesBaseName
				project {
					name project.archivesBaseName
					packaging 'jar'
					description 'TechReborn'
					url 'https://github.com/TechReborn/TechReborn'
					scm {
						url 'https://github.com/TechReborn/TechReborn'
						connection 'scm:git:git@github.com:TechReborn/TechReborn.git'
						developerConnection 'scm:git:git@github.com:TechReborn/TechReborn.git'
					}
					issueManagement {
						system 'github'
						url 'https://github.com/TechReborn/TechReborn/issues'
					}
					licenses {
						license {
							name 'License'
							url 'https://raw.githubusercontent.com/TechReborn/TechReborn/master/LICENSE.md'
							distribution 'repo'
						}
					}
					developers {
						developer {
							id 'modmuss50'
							name 'modmuss50'
							roles { role 'developer' }
						}
						developer {
							id 'Gigabit101'
							name 'Gigabit101'
							roles { role 'developer' }
						}
					}
				}
			}
		}
	}
}

task wrapper(type: Wrapper) {
	//To update the wrapper change the version bellow then run: gradle wrapper
	gradleVersion = '2.9'
}

import org.apache.commons.io.FileUtils;
import groovy.util.XmlSlurper;
import java.io.File;

task curseTools << {
	def cacheFiles = new File(".gradle/curseTools")
	if (!cacheFiles.exists()) cacheFiles.mkdirs()

	def mavenMetadata = new File(cacheFiles, "maven-metadata.xml")

	logger.lifecycle(":downloading curseTools metadata")
	FileUtils.copyURLToFile(new URL("http://maven.modmuss50.me/CurseTools/CurseTools/maven-metadata.xml"), mavenMetadata)

	def metadata = new XmlSlurper().parseText(FileUtils.readFileToString(mavenMetadata))
	def curseToolsVersion = metadata.versioning.release

	def curseTools = new File(cacheFiles, "${curseToolsVersion}.jar")

	logger.lifecycle(":downloading CurseTools")
	FileUtils.copyURLToFile(new URL("http://maven.modmuss50.me/CurseTools/CurseTools/${curseToolsVersion}/CurseTools-${curseToolsVersion}.jar"), curseTools)

	logger.lifecycle(":launching CurseTools")
	ant.java(jar: curseTools.getAbsolutePath(), fork: true, spawn: false) {
		arg(value: jar.archivePath.getAbsolutePath())
		arg(value: deobfJar.archivePath.getAbsolutePath())
		arg(value: apiJar.archivePath.getAbsolutePath())
		arg(value: sourceJar.archivePath.getAbsolutePath())
	}
}
